Erzeugen der Trainingsdaten

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.py filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
