--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,10 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:f082914aa0a207c1e609ee7a7110aa77a55e015827cbca76c1c5ff8f11088dc8
-size 84
+pygithub
+numpy
+pandas
+sklearn
+openpyxl
+xlrd
+tqdm
+category_encoders
+joblib
+tensorflow
